--- a/ace-web/src/components/AgentListing/AgentListing.scss
+++ b/ace-web/src/components/AgentListing/AgentListing.scss
@@ -105,7 +105,7 @@
     width: 350px;
     aspect-ratio: 2/4;
     margin: 0 1rem;
-    background-color: #a22e2c;
+    background: $darkdg-bg;
     border-radius: 5px;
     border: 1px solid $primary-color;
     position: relative;
