--- a/ace-web/src/components/MapView/MapView.scss
+++ b/ace-web/src/components/MapView/MapView.scss
@@ -101,7 +101,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-color: #0f1923;
+    background: $darkdg-bg;
     overflow: auto;
 
     .map-bg-overlay {
@@ -542,7 +542,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0f1923;
+    background: $darkdg-bg;
     position: relative;
     overflow: hidden;
 
@@ -645,7 +645,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0f1923;
+    background: $darkdg-bg;
     position: relative;
     overflow: hidden;
 
