--- a/ace-web/src/components/UserProfile/UserProfile.scss
+++ b/ace-web/src/components/UserProfile/UserProfile.scss
@@ -47,7 +47,7 @@
 .profile-container {
     width: 100%;
     min-height: 100vh;
-    background-color: #0f1923;
+    background: $darkdg-bg;
     color: $light-color;
     padding: 60px 40px 40px 260px;
     position: relative;
@@ -217,7 +217,7 @@
             }
 
             .stat-card {
-                background: rgba(15, 25, 35, 0.7);
+                background: linear-gradient(135deg, #df4c4c42 0%, rgb(17, 17, 17) 50%, rgb(15, 15, 15) 100%) 0% 0%;
                 border: 1px solid rgba($primary-color, 0.3);
                 padding: 15px 30px;
                 display: flex;
@@ -275,7 +275,7 @@
         }
 
         .profile-section {
-            background: rgba(15, 25, 35, 0.7);
+            background: linear-gradient(135deg, rgb(24, 23, 23) 0%, rgb(17, 17, 17) 50%, rgb(15, 15, 15) 100%) 0% 0%;
             border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 30px;
 
@@ -515,7 +515,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0f1923;
+    background: $darkdg-bg;
     position: relative;
     overflow: hidden;
 
