--- a/ace-web/src/components/UserSettings/UserSettings.scss
+++ b/ace-web/src/components/UserSettings/UserSettings.scss
@@ -39,7 +39,7 @@ body {
     border: 2px solid rgb(223, 76, 76);
     border-radius: 40px;
     padding: 20px;
-    background: linear-gradient(135deg, rgb(24, 23, 23) 0%, rgb(17, 17, 17) 50%, rgb(15, 15, 15) 100%) 0% 0%;
+    background: $darkdg-bgcard;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
