--- a/ace-web/src/styles/variables.scss
+++ b/ace-web/src/styles/variables.scss
@@ -7,6 +7,8 @@ $form-input-bg: #eee;
 $form-text: #333;
 $form-placeholder: #888;
 $toggle-bg: #292929;
+$darkdg-bg: linear-gradient(to right, #0a0a0a, #0e0e0e, #1e1e1e);
+$darkdg-bgcard: linear-gradient(135deg, rgb(24, 23, 23) 0%, rgb(17, 17, 17) 50%, rgb(15, 15, 15) 100%) 0% 0%;
 
 $valorant-font: 'Valorant', sans-serif;
 $rajdhani-font: 'Rajdhani', sans-serif;
@@ -17,3 +19,4 @@ $box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 $mobile-sm: 400px;
 $mobile: 650px;
 $tablet: 900px;
+
